# Bsdiff_demo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/bsdiff/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/bsdiff/sample/: MainActivity.java  UriParseUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/bsdiff/sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
